--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello Github!
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Anton|Fascinate+Inline|Montserrat" rel="stylesheet">
+  <title></title>
+</head>
+<body>
+  <div id="root"></div>
+<script type="text/javascript" src="app.js?75a54fdebd405afe7807"></script><script type="text/javascript" src="vendor.js?75a54fdebd405afe7807"></script><script type="text/javascript" src="appStyles.js?75a54fdebd405afe7807"></script><script type="text/javascript" src="vendorStyles.js?75a54fdebd405afe7807"></script></body>
+</html>
