--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@
 </head>
 <body>
   <div id="root"></div>
-<script type="text/javascript" src="app.js?75a54fdebd405afe7807"></script><script type="text/javascript" src="vendor.js?75a54fdebd405afe7807"></script><script type="text/javascript" src="appStyles.js?75a54fdebd405afe7807"></script><script type="text/javascript" src="vendorStyles.js?75a54fdebd405afe7807"></script></body>
+<script type="text/javascript" src="app.js?5707a40676dfa930ccd8"></script><script type="text/javascript" src="vendor.js?5707a40676dfa930ccd8"></script><script type="text/javascript" src="appStyles.js?5707a40676dfa930ccd8"></script></body>
 </html>
