Moves all files to 'static' and puts kebabman in root

--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<html prefix="og: https://ogp.me/ns#">
-<head>
-<title>how 2 react</title>
-<meta property="og:title" content="how 2 react" />
-<meta property="og:url" content="https://onedrive.live.com/embed?cid=2566464A2643C265&resid=2566464A2643C265%21119937&authkey=ADx1uwWsYfKrWaY" />
-<meta property="og:video" content="https://onedrive.live.com/embed?cid=2566464A2643C265&resid=2566464A2643C265%21119937&authkey=ADx1uwWsYfKrWaY" />
-</head>
-<body>
-  <iframe src="https://onedrive.live.com/embed?cid=2566464A2643C265&resid=2566464A2643C265%21119937&authkey=ADx1uwWsYfKrWaY" allowfullscreen></iframe>
-</body>
-</html>
+<html><head><title>Le-Kebab Man</title><link rel="preload" as="font" href="/Emulogic.3fd9d6d9.ttf" type="font/ttf"><link rel="stylesheet" as="font" href="/index.aa873b19.css" type="text/css"></head><body> <div class="banner">left</div> <div id="kebab"></div> <div class="banner">right</div> <script type="module" src="/index.4347fe81.js"></script> </body></html>
